--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
     "chalk": "^4.0.0",
     "discord.js": "^12.1.1",
+    "lavacord": "^1.1.7",
     "os-utils": "0.0.14",
     "rethinkdb": "^2.4.2",
     "socket.io": "^2.3.0"
