--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "Njk3NTY3NTU1ODYyMTM0ODM1.Xo5eig.A42VdB1ZwOs1IAMztXqLjJFrRWQ",
+    "token": "TOKEN_GOES_HERE",
     "prefix": "m!"
 }
