--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@audius/audius.js": "0.0.3",
     "@discordjs/opus": "^0.1.0",
     "chalk": "^4.0.0",
-    "discord.js": "^12.1.1",
+    "discord.js": "^12.2.0",
     "lavacord": "^1.1.7",
     "os-utils": "0.0.14",
     "rethinkdb": "^2.4.2",
